--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "prettier": "prettier -write .",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "next build && next export && git add out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "keywords": [],
   "author": "Immanuel Williams Irsal<willirsal.contact@gmail.com",
@@ -25,6 +26,7 @@
     "three": "^0.137.5"
   },
   "devDependencies": {
+    "babel-plugin-transform-define": "^2.0.1",
     "eslint": "^8.8.0",
     "eslint-config-next": "^12.0.10",
     "prettier": "^2.5.1"
